# IPv4calc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac
src/: CMakeLists.txt  Makefile.am  main.cpp
